fix navbar z-index

--- a/src/css/navbar.scss
+++ b/src/css/navbar.scss
@@ -1,6 +1,7 @@
 .navbar {
   border-bottom: 1px solid black;
   padding: 1rem 3%;
+  background: #f9f9f9;
   z-index: 3;
 
   .nav-link {
